nifests are added

--- a/secret.yaml
+++ b/secret.yaml
@@ -6,5 +6,5 @@ metadata:
   annotations:
     avp.kubernetes.io/path: "path/to/secret"
 type: Opaque
-data:
-  password: <password-vault-key>
+stringData:
+  sample-secret: <test-secret>
