--- a/secret.yaml
+++ b/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: example-secret
   namespace: argocd
   annotations:
-    avp.kubernetes.io/path: "path/to/secret"
+    avp.kubernetes.io/path: "integ/argocd/samplesecret"
 type: Opaque
 stringData:
-  sample-secret: <test-secret>
+  createdby: <test-secret>
