--- a/secret.yaml
+++ b/secret.yaml
@@ -7,4 +7,4 @@ metadata:
     avp.kubernetes.io/path: "integ/argocd/samplesecret"
 type: Opaque
 stringData:
-  createdby: <test-secret>
+  test-secret: <createdby>
