--- a/secret.yaml
+++ b/secret.yaml
@@ -2,7 +2,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: example-secret
-  namespace: argocd
+  namespace: shabeeb-testing
   annotations:
     avp.kubernetes.io/path: "integ/argocd/samplesecret"
 type: Opaque
