--- a/secret.yaml
+++ b/secret.yaml
@@ -7,4 +7,6 @@ metadata:
     avp.kubernetes.io/path: "integ/argocd/samplesecret"
 type: Opaque
 stringData:
-  test-secret: <createdby>
+  createdby: <createdby>
+  Senior: <Senior>
+  Master: <Master>
